# AXI6-Cinema-Robotics

./: .gitignore  README.md  requirements.txt
axi6_venv/: .gitignore
axi6_venv/control/: CoaxSphericalController.py  diffy_threaded.py  test_controller.py
axi6_venv/vision/: export.py  tracker.py
axi6_venv/website/: .gitignore  app.js  curve-editor.js  index.html  package-lock.json  package.json  robot-controls.js  style.css
axi6_ws/: .gitignore
core/: __init__.py
core/comms/: __init__.py
core/motion/: spline.py  trajectory.py
core/motor/: __init__.py  axis.py  differential.py
legacy/: README.md
legacy/mac/: YOLO_nano_test.py  orbit_test.py
mac/: YOLO_nano_test.py  spline_server.py
mac/tracking/: yolo.py
pi/: demo_script_uartless.py  demo_script_uartless_simple.py  haarcascade.py  haarcascade_PID.py  mediapipe_stream.py  server.py  test_cam_terminal.py
ros2/axi6_camera_system/: package.xml  setup.cfg  setup.py
ros2/axi6_camera_system/axi6_camera_system/: __init__.py  controller_node.py  gpio_motor_utils.py  hardware_node.py  trajectory_publisher.py  vision_node.py
ros2/axi6_camera_system/config/: params.yaml
ros2/axi6_camera_system/launch/: system_launch.py
socket/: mac_haarcascade.py  mac_orbit.py  mac_yolo.py  mac_yolo_KF.py  pi_motor_server.py  pi_motor_velocity.py
tests/: absolute.py  demo_script_uartless.py  face_detection.py  mediapipe_test.py  migrate_math.py  motor_velocity.py  pi_motor_velocity.py  sanjay.py  sanjay_threaded.py  spline_editor.html  spline_test.py  test_cam.py  test_motor.py  trapezoidal_pigpio.py  vactual.py
(+35 files in other folders)
